--- a/css/app.css
+++ b/css/app.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css?family=Noticia+Text');
-@import url('https://fonts.googleapis.com/css?family=Karla');
 @import url('https://fonts.googleapis.com/css?family=Muli');
 
 /* ---- global styling ---- */
@@ -11,7 +10,6 @@
 h1{
   font-family: 'Noticia Text', serif;
 }
-
 img{
   border-radius: 50%;
 }
@@ -42,13 +40,12 @@ nav ul li a:hover{
 /* ---- buttons ---- */
 
 #button-holder{
-  /*background-color: gold;*/
   height: 100px;
   text-align: center;
   padding-top: 3%;
   padding-bottom: 3%;
 }
-.btn-import-save{
+.button{
   background-color: rgb(64, 64, 64);
   /*color: black;*/
   font-weight: bold;
@@ -56,7 +53,7 @@ nav ul li a:hover{
   padding: 1.5% 2% 1.5% 2%;
 }
 
-.btn-import-save:hover{
+.button:hover{
   background-color: black;
   box-shadow: 1.5px 1.5px 1.5px grey;
 }
@@ -88,7 +85,6 @@ nav ul li a:hover{
   text-align: center;
 }
 
-
 .spinner{
   margin-top: 7%;
 }
@@ -96,9 +92,65 @@ nav ul li a:hover{
 /* ---- cluster styling on accountview ---- */
 .thumbnail{
   border: 1px solid black;
-  padding: 1%;
+  padding: 0.7%;
   margin: 1%;
   background-color: rgba(210, 217, 215, 0.34);
-  height: 100%;
+  height: 250px;
+  width: 250px;
   text-align: center;
+}
+
+.thumbnail h4, .thumbnail p, .thumbnail img{
+  margin-top: 5%;
+}
+
+/* ---- editview, let's make this happen ---- */
+
+#background-cover {
+  background-color: rgba(167, 167, 167, 0.3);
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  z-index: 10;
+  display: none;
+}
+
+#edit-cluster{
+  margin: auto;
+  margin-top: 50px;
+  margin-left: 300px;
+  z-index: 10000;
+  background-color: white;
+  position: fixed;
+  padding: 3%;
+  width: 300px;
+  height: 300px;
+  text-align: center;
+  box-shadow: 3px 3px 3px grey;
+  border-radius: 0.5%;
+}
+
+#edit-cluster .button{
+  padding: 7%;
+}
+
+#edit-cluster h4{
+  font-weight: bolder;
+}
+
+#category-dropdown{
+  display: none;
+  z-index: 10001;
+  background-color: white;
+  border: 2px black solid;
+}
+
+.category:nth-child(even){
+  background-color: lightgray;
+}
+
+.category:hover{
+  background-color: lightgreen;
 }
